# vpp

./: Makefile  README.md
.github/workflows/: build.yml  ccpp.yml
src/: CMakeLists.txt
src/cmake/: crypto_engines.cmake  library.cmake  plugin.cmake
src/crypto_engines/openssl/: main.c
src/plugins/: CMakeLists.txt
src/plugins/abf/: CMakeLists.txt
src/plugins/acl/: acl.api  acl_test.c
src/plugins/captun/: CMakeLists.txt  main.c
src/plugins/dev_ena/: CMakeLists.txt
src/plugins/fateshare/: CMakeLists.txt
src/plugins/geneve_pcapng/: CMakeLists.txt  README.md  main.c  show_packets.c
src/plugins/geneve_pcapng/example-infra/store-files/: Cargo.toml  readme.md
src/plugins/gpcapng/: destination.c  destination.h  destination_http.c  gpcapng.h  gpcapng_node.c  main.c
src/plugins/hs_apps/: CMakeLists.txt
src/plugins/http/: http.c  http1.c  http_buffer.c  http_buffer.h
src/plugins/idpf/: CMakeLists.txt
src/plugins/lisp/: CMakeLists.txt
src/plugins/osi/: CMakeLists.txt
src/plugins/ppp/: CMakeLists.txt
src/plugins/quic/: CMakeLists.txt
src/plugins/sflow/: CMakeLists.txt
src/svm/: CMakeLists.txt  message_queue.c  message_queue.h  queue.h  svm.c  svm_common.h  svmdb.c  svmdbtool.c
src/vat/: CMakeLists.txt
src/vcl/: CMakeLists.txt
src/vlib/: CMakeLists.txt  main.c  node.c  threads.c  threads_cli.c
src/vlibmemory/: socket_client.c
src/vnet/: CMakeLists.txt
src/vpp-api/: CMakeLists.txt
src/vppinfra/: CMakeLists.txt  clib.h  cpu.c  cpu.h  elf_clib.c  longjmp.S  pmalloc.c  socket.c  unix-formats.c  unix-misc.c
test/: test_hbh.py
(+24 files in other folders)
