[package]
name = "store-files"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "0.14", features = ["full", "http1", "tcp"] }
tokio = { version = "1", features = ["full", "fs", "io-util"] }
futures-util = "0.3"
bytes = "1.0"
bytesize = "1.1"
# TLS requirements
rustls = "0.20"
rustls-pemfile = "1.0"
tokio-rustls = "0.23"
hyper-rustls = { version = "0.23", features = ["http1"] }
